Fixes StationCreator EditorTools horizontal scroll dock right (refs #105)

--- a/public/assets/css/mobilot.css
+++ b/public/assets/css/mobilot.css
@@ -556,8 +556,9 @@ editor-tools {
 }
 
 editor-tools div {
-  height:48px;
-  width:675px;
+  height: 48px;
+  white-space: nowrap;
+  padding-bottom: 10px;
 }
 
 .editor-add-button {
